[gd_scene load_steps=11 format=2]

[ext_resource path="res://Assets/Enemy.png" type="Texture" id=1]
[ext_resource path="res://Enemy.gd" type="Script" id=2]
[ext_resource path="res://Hurtbox.tscn" type="PackedScene" id=3]
[ext_resource path="res://WhiteColour.shader" type="Shader" id=4]

[sub_resource type="ShaderMaterial" id=1]
resource_local_to_scene = true
shader = ExtResource( 4 )
shader_param/active = false

[sub_resource type="CircleShape2D" id=2]
radius = 6.96924

[sub_resource type="CircleShape2D" id=3]
radius = 15.1759

[sub_resource type="Animation" id=4]
resource_name = "Start"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=5]
resource_name = "Stop"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="CircleShape2D" id=6]
radius = 156.22

[node name="Enemy" type="KinematicBody2D" groups=[
"enemies",
]]
rotation = 3.14159
scale = Vector2( 2, 2 )
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 1 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.0442013, 3.18198 )
shape = SubResource( 2 )

[node name="Gun" type="Position2D" parent="."]
position = Vector2( 0.486217, -29.8311 )

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="Hurtbox" parent="." instance=ExtResource( 3 )]

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( 0.0571404, 3.1276 )
shape = SubResource( 3 )

[node name="BlinkAnimationPlayer" type="AnimationPlayer" parent="."]
anims/Start = SubResource( 4 )
anims/Stop = SubResource( 5 )

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
position = Vector2( 11.4021, 8.22015 )

[node name="CPUParticles2D2" type="CPUParticles2D" parent="."]
position = Vector2( -11.4463, 8.57365 )

[node name="Area2D" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 6 )
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="Hurtbox" to="." method="_on_Hurtbox_body_entered"]
[connection signal="invinciblity_ended" from="Hurtbox" to="." method="_on_Hurtbox_invinciblity_ended"]
[connection signal="invinciblity_started" from="Hurtbox" to="." method="_on_Hurtbox_invinciblity_started"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]

[editable path="Hurtbox"]
